Packet Pack: Everything Else in Multiprotos (#139)
* Packet Pack: First half of Alphabet

Notes:
PacketMonsterForceAlertNotify does not set isAlert
PacketDestroyMaterialRsp might have a simpler way of turning a Int2IntMap into two lists while preserving order.
PacketCodexDataFullNotify had a big rework and needs review.

* Clean up OuterClass: First half of Alphabet

* Packet Pack: Second half of Alphabet\nNotes:\n PacketWeaponAwakenRsp might have a better way of making those two maps.\nPacketQueryCodexMonsterBeKilledNumRsp might have a better way to set three lists at once.

* Clean up OuterClass: Second half of Alphabet